# flopoco

./: .gitignore  0_OptionsForSignedUnsigned.txt  0_TODO_WHEN_MERGING.txt  CMakeLists.txt  Coil.conf  Doxyfile  INSTALL  IntAdder.cpp  IntAdder.hpp  LZOC.cpp  LongAcc.cpp  LongAcc.hpp  Makefile.autotools  Multiplier.cpp  Multiplier.hpp  Operator.cpp  README  README.autotools  Shifters.cpp  TODO  TODO.org  Table.hpp  Target.hpp  VERSION  Wrapper.cpp  autotools-files.tgz  flopoco_test.cmd  frunsyn  main.cpp  qrunsyn  release_test.py  runsyn  soaktestList.txt  utils.cpp
ConstMult/: FPConstMult.cpp  FPConstMult.hpp  IntConstMult.cpp  IntConstMult.hpp  ShiftAddDag.cpp  ShiftAddDag.hpp  ShiftAddOp.cpp
Targets/: ClassicalFPGA.cpp  ClassicalFPGA.hpp
autotools/: Makefile.am  configure.ac
autotools/src/: Makefile.am
autotools/src/FPExpressions/: Makefile.am
autotools/src/LNS/: Makefile.am
doc/: ReleaseNotes  VHDLStyle.txt  flopocoCodingStandards.html  flopoco_developer_manual.html  flopoco_user_manual.html
doc/Figures/: LogArch.fig  flopocoLogo.fig  flopocoLogo.pdf_t  logo.tex
doc/LaTeX/: flopoco_developer_manual.tex
doc/doxygen/: Doxyfile
doc/flopoco_developer_manual/: flopoco_developer_manual.tex
doc/web/: README.txt  ReleaseNotes.txt  flopoco.css  flopoco_installation.html  flopoco_user_manual.html  index.html  installation-windows.html  operators.old.html  ttr.html
hotbm/: AUTHORS  CMakeLists.txt
hotbm/src/: Exhaustive.cc  Function.cc  Function.hh  HOTBMInstance.cc  Log.cc  Log.hh  MPPolynomial.cc  Main.cc  Minimax.cc  Minimax.hh  PWPolynomial.hh  Param.cc  Param.hh  Power.hh  PowerAdHoc.cc  PowerROM.cc  Sin.cc  Sin.hh  Term.cc  Util.cc  Util.hh
hotbm/tests/: dotests  log_16_16_1.vhdl.good  log_16_16_2.vhdl.good  log_8_8_1.vhdl.good  log_8_8_2.vhdl.good  sin_16_16_1.vhdl.good  sin_16_16_2.vhdl.good  sin_8_8_1.vhdl.good  sin_8_8_2.vhdl.good
src/: BigTestBench.cpp  BigTestBench.hpp  BitHeap.cpp  BitHeap.hpp  Collision.cpp  Collision.hpp  DSP.cpp  DSP.hpp  DotProduct.cpp  DotProduct.hpp  DualSub.cpp  DualTable.cpp  DualTable.hpp  DualTable2.cpp  DualTable2.hpp  Exp.cpp  Exp.hpp  FP2DNorm.cpp  FP2Fix.cpp  FP2Fix.hpp  FPAddSub.cpp  FPAddSub.hpp  FPAdder.cpp  FPAdder.hpp  FPAdder3Input.cpp  FPAdderDualPath.cpp  FPAdderSinglePath.cpp  FPAdderSinglePath.hpp  FPConstDiv.cpp  FPConstDiv.hpp  FPDiv.cpp  FPDiv.hpp  FPExp.cpp  FPExp.hpp  FPFMAcc.cpp  FPFMAcc.hpp  FPLog.cpp  FPLog.hpp  FPMultiplier.cpp  FPMultiplier.hpp  (+172 more)
src/Apps/: Collision.cpp  Collision.hpp  FPFMAcc.cpp  FPFMAcc.hpp  FPJacobi.cpp  FPJacobi.hpp
src/Attic/: FPPipeline.cpp  FPPipeline.hpp
src/BitHeap/: BitHeap.cpp  BitHeap.hpp  Plotter.hpp  WeightedBit.hpp
src/CORDIC/: CordicSinCos.cpp  CordicSinCos.hpp  CordicSinCosClassic.cpp  CordicSinCosClassic.hpp  CordicSinCosRedIter.cpp  CordicSinCosRedIter.hpp  FixMicroRotation.cpp  FixMicroRotation.hpp  FixedPointSinOrCos.cpp  FixedPointSinOrCos.hpp  mainCordicSinCos.cpp  mainFixMicroRotation.cpp  mainFixedPointSinOrCos.cpp
src/Complex/: ComplexAdder.cpp  ComplexAdder.hpp  ComplexMultiplier.cpp  ComplexMultiplier.hpp  FPComplexMultiplier.cpp  FixComplexKCM.cpp  FixComplexKCM.hpp  FixComplexMult.cpp  FixComplexMult.hpp  FixedComplexAdder.hpp  FixedComplexMultiplier.cpp  FixedComplexMultiplier.hpp  IntFFT.cpp  IntFFT.hpp  IntFFTButterfly.cpp  IntFFTButterfly.hpp  IntFFTLevelDIT2.cpp  IntFFTLevelDIT2.hpp  IntTwiddleMultiplier.cpp  IntTwiddleMultiplier.hpp  IntTwiddleMultiplierAlternative.cpp  IntTwiddleMultiplierAlternative.hpp  OldFixedComplexMultiplier.cpp  OldFixedComplexMultiplier.hpp  TODO.txt
src/ConstMult/: CRFPConstMult.cpp  CRFPConstMult.hpp  FPConstDiv.cpp  FPConstDiv.hpp  FPConstMult.cpp  FPConstMult.hpp  FPConstMultParser.cpp  FPConstMultParser.hpp  FPRealKCM.cpp  FPRealKCM.hpp  FirstKCMTable.cpp  FirstKCMTable.hpp  FixRealKCM.cpp  FixRealKCM.hpp  FixRealKCMBH.cpp  FixRealKCMBH.hpp  IntConstDiv.cpp  IntConstDiv.hpp  IntConstDiv3.cpp  IntConstDiv3.hpp  IntConstMCM.cpp  IntConstMCM.hpp  IntConstMult.cpp  IntConstMult.hpp  IntIntKCM.cpp  IntIntKCM.hpp  KCMTable.cpp  KCMTable.hpp  LastKCMTable.cpp  LastKCMTable.hpp  README  ShiftAddDag.cpp  ShiftAddDag.hpp  ShiftAddOp.cpp  ShiftAddOp.hpp
src/Conversions/: FP2Fix.cpp  FP2Fix.hpp  Fix2FP.cpp  Fix2FP.hpp  InputIEEE.cpp  InputIEEE.hpp  OutputIEEE.cpp  OutputIEEE.hpp
src/ExpLog/: FPExp.cpp  FPExp.hpp  FPPow.cpp  FPPow.hpp  IterativeLog.cpp  IterativeLog.hpp
src/FPAddSub/: FPAdd.cpp  FPAdd.hpp  FPAdd3Input.cpp  FPAdd3Input.hpp  FPAddDualPath.cpp  FPAddDualPath.hpp  FPAddSinglePath.cpp  FPAddSinglePath.hpp  FPAddSub.cpp  FPAddSub.hpp  FPAdder3Input.cpp  FPAdder3Input.hpp  FPAdderDualPath.cpp  FPAdderDualPath.hpp  FPAdderSinglePath.cpp  FPAdderSinglePath.hpp
src/FPComposite/: FP2DNorm.cpp  FPDotProduct.cpp  FPDotProduct.hpp  FPLargeAcc.cpp  FPLargeAcc.hpp  FPLargeAccumulator.cpp  FPLargeAccumulator.hpp  FPSumOf3Squares.cpp  FPSumOfSquares.cpp  FPSumOfSquares.hpp  LargeAccToFP.cpp  LargeAccToFP.hpp  LargeAccumulatorToFP.cpp  LargeAccumulatorToFP.hpp
src/FPDiv/: SRT4Step.cpp  SRT4Step.hpp
src/FPDivSqrt/: FPDiv.cpp  FPDiv.hpp  FPSqrt.cpp  FPSqrt.hpp  FPSqrtPoly.cpp  FPSqrtPoly.hpp  SelFunctionTable.cpp  SelFunctionTable.hpp
src/FPExpressions/: ExpressionParser.y  ExpressionParserData.cpp  ExpressionParserData.h  ExpressionScanner.l
src/FPFunctions/: FPExp.cpp  FPLog.cpp  FPPow.cpp
src/FPMultSquare/: FPMult.cpp  FPMult.hpp  FPMultKaratsuba.cpp  FPMultKaratsuba.hpp  FPMultiplier.cpp  FPMultiplier.hpp  FPMultiplierKaratsuba.cpp  FPMultiplierKaratsuba.hpp  FPSquare.cpp  FPSquare.hpp  FPSquarer.cpp  FPSquarer.hpp
src/FixFilters/: FixFIR.cpp  FixFIR.hpp  FixHalfSine.cpp  FixHalfSine.hpp  FixIIR.cpp  FixIIR.hpp  FixSOPC.cpp  FixSOPC.hpp
src/FixFunctions/: BasicPolyApprox.cpp  BasicPolyApprox.hpp  BipartiteTable.cpp  FixFunction.cpp  FixFunction.hpp  FixFunctionByMultipartiteTable.cpp  FixFunctionByPiecewisePoly.cpp  FixFunctionByPiecewisePoly.hpp  (+19 more)
tools/: check_operator.py  flopoco_test.cmd  generatorIntMultiplierTEST.cpp  ise-runsyn  release_test.py  runsyn  testFPLog.sh  vivado-runsyn.py
(+469 files in other folders)
